plugins/editorconfig/testData/org/editorconfig/language/parser/valid/complexHeader.editorconfig
[{a, ab, abc}bar[foo]bas{hello, world}]
