plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/tooManyTopLevelOptions.editorconfig
foo=bar
bas=hello
world=text
